# vecview

./: .gitignore  Cargo.toml  README.md  vecview_instructions.md
.github/workflows/: ci.yml
contrib/: README.md  install-vv.sh
crates/vecview/: Cargo.toml
crates/vecview-core/: Cargo.toml
crates/vecview-core/src/: lib.rs
crates/vecview-output/: Cargo.toml
crates/vecview-output/src/: framebuffer.rs  kitty.rs  lib.rs  sixel.rs
crates/vecview-pdf/: Cargo.toml
crates/vecview-pdf/src/: lib.rs
crates/vecview-pdf/tests/: pdfium_smoke.rs
crates/vecview-renderer/: Cargo.toml
crates/vecview-renderer/src/: lib.rs
crates/vecview-svg/: Cargo.toml
crates/vecview-svg/src/: lib.rs
crates/vecview/src/: main.rs
crates/vecview/tests/: e2e.rs  sixel_check.rs
examples/nvim/: README.md
examples/nvim/vv.nvim/lua/vv/: init.lua  term.lua
examples/yazi/: README.md
examples/yazi/vv.yazi/: main.lua
