[workspace]
members = [
    "crates/vecview",
    "crates/vecview-core",
    "crates/vecview-pdf",
    "crates/vecview-svg",
    "crates/vecview-renderer",
    "crates/vecview-output",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mitsuaki Takeuchi"]
license = "Apache-2.0"
repository = "https://github.com/barewalker/vecview"

[workspace.dependencies]
# コア
anyhow = "1"
thiserror = "2"

# フォーマット
usvg = "0.47"
# pdfium-render は PDF を使う vecview-pdf でのみ依存（クレート側で宣言）

# レンダリング
lyon = "1"
wgpu = "29"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }

# ターミナル / 出力
crossterm = "0.29"
base64 = "0.22"

# Framebuffer（Linux専用）
memmap2 = "0.9"
nix = { version = "0.29", features = ["ioctl"] }

# ファイル監視
notify = "8"
notify-debouncer-full = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }
