[workspace]
members = [
    "crates/vecview",
    "crates/vecview-core",
    "crates/vecview-pdf",
    "crates/vecview-svg",
    "crates/vecview-renderer",
    "crates/vecview-output",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["barewalker <barewalker@users.noreply.github.com>"]
license = "Apache-2.0"
repository = "https://github.com/barewalker/vecview"
homepage = "https://github.com/barewalker/vecview"
keywords = ["terminal", "svg", "typst", "pdf", "preview"]
categories = ["command-line-utilities", "visualization"]

[workspace.dependencies]
# Core
anyhow = "1"
thiserror = "2"

# Formats
usvg = "0.47"
# pdfium-render is a dependency only of vecview-pdf (which uses PDF); declared in that crate.

# Rendering
lyon = "1"
wgpu = "29"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }

# Terminal / output
crossterm = "0.29"
base64 = "0.22"

# Framebuffer (Linux only)
memmap2 = "0.9"
nix = { version = "0.29", features = ["ioctl", "poll"] }

# File watching
notify = "8"
notify-debouncer-full = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }
