[package]
name = "vecview-output"
version.workspace = true
edition.workspace = true

[dependencies]
vecview-core = { path = "../vecview-core" }
crossterm.workspace = true
base64.workspace = true
flate2 = "1"
anyhow.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
memmap2.workspace = true
nix.workspace = true
