[package]
name = "vecview-output"
version.workspace = true
edition.workspace = true
description = "Output backends for vecview: Kitty graphics, Sixel, and Linux framebuffer."
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
vecview-core = { path = "../vecview-core", version = "0.1.0" }
crossterm.workspace = true
base64.workspace = true
flate2 = "1"
anyhow.workspace = true
icy_sixel = "0.5.0"

[target.'cfg(target_os = "linux")'.dependencies]
memmap2.workspace = true
nix.workspace = true
