[package]
name = "vecview-pdf"
version.workspace = true
edition.workspace = true
description = "Direct PDF rasterization and text-layer extraction via pdfium, for vecview."
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
pdfium-render = "0.8"
