[package]
name = "vecview"
version.workspace = true
edition.workspace = true

# The package (full name) stays vecview; the installed command is the short vv.
[[bin]]
name = "vv"
path = "src/main.rs"

[dependencies]
vecview-core = { path = "../vecview-core" }
vecview-pdf = { path = "../vecview-pdf" }
vecview-svg = { path = "../vecview-svg" }
vecview-renderer = { path = "../vecview-renderer" }
vecview-output = { path = "../vecview-output" }
clap.workspace = true
anyhow.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
crossterm.workspace = true
base64.workspace = true
ctrlc = "3"
toml = "0.8"
# Used for PNG output in headless rendering (--render).
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
icy_sixel = "0.5.0"
