[package]
name = "vecview"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Display vector graphics (SVG / Typst / PDF) in your terminal at full vector quality. Installs the `vv` command."
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

# The package (full name) stays vecview; the installed command is the short vv.
[[bin]]
name = "vv"
path = "src/main.rs"

[dependencies]
vecview-core = { path = "../vecview-core", version = "0.1.0" }
vecview-pdf = { path = "../vecview-pdf", version = "0.1.0" }
vecview-svg = { path = "../vecview-svg", version = "0.1.0" }
vecview-renderer = { path = "../vecview-renderer", version = "0.1.0" }
vecview-output = { path = "../vecview-output", version = "0.1.0" }
clap.workspace = true
anyhow.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
crossterm.workspace = true
base64.workspace = true
ctrlc = "3"
toml = "0.8"
# Used for PNG output in headless rendering (--render).
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
icy_sixel = "0.5.0"
